--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,10 @@ h1 {
 	background-color: hsl(330, 100%, 98%);
 	font-size: 0.9rem;
 	padding: 1.5rem;
-	border-radius: 0.5em;
+	border-radius: 0.8em;
 }
 .prep h4 {
+	margin-bottom: 0.5em;
 	font-size: 1.2rem;
 	color: hsl(332, 51%, 32%);
 	font-weight: 600;
@@ -64,15 +65,34 @@ h1 {
 
 .prep li {
 	color: hsl(332, 51%, 32%);
-	line-height: 1.7rem;
+	line-height: 2rem;
 	margin-left: 0.4rem;
 }
 
-.bold {
+.bold,
+li {
 	margin-left: 1.2rem;
-	font-weight: 600;
+	font-weight: 700;
 	font-size: 1rem;
 	color: hsl(30, 10%, 34%);
+}
+
+span {
+	font-size: 1rem;
+	font-weight: 400;
+	margin-left: 0.15rem;
+	color: hsl(30, 10%, 34%);
+}
+
+.ingredients h2 {
+	padding: 0.8em 0;
+	color: hsl(14, 45%, 36%);
+	font-size: 1.7rem;
+	font-weight: 400;
+}
+
+.ingredients li {
+	color: hsl(14, 45%, 36%);
 }
 
 .attribution {
