--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,12 @@ span {
 	margin-left: 0.15rem;
 	color: hsl(30, 10%, 34%);
 }
+.ingredients {
+	margin-bottom: 3rem;
+}
 
-.ingredients h2 {
+.ingredients h2,
+.instructions h4 {
 	padding: 0.8em 0;
 	color: hsl(14, 45%, 36%);
 	font-size: 1.7rem;
@@ -93,6 +97,21 @@ span {
 
 .ingredients li {
 	color: hsl(14, 45%, 36%);
+	margin-left: 0.3rem;
+}
+
+.ingre {
+	margin-left: 1.2rem;
+	line-height: 2rem;
+}
+
+ol li {
+	font-weight: 400;
+	font-size: 1rem;
+}
+
+.instructions {
+	border-top: 1px solid hsla(32, 10%, 34%, 0.267);
 }
 
 .attribution {
